<resources>
    <string name="app_name">Rewarding Challenge</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="format_revenue">%1$s €</string>
    <string name="format_milestone">%1$s %2$s</string>
    <string name="status_label">Status:</string>
    <string name="revenue_label">Revenue:</string>
    <string name="milestone_label">Milestone:</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="snackbar_close">CLOSE</string>
    <string name="description_label">Description</string>
    <string name="current_milestone_label">Current threshold</string>
    <string name="edit_nbtn_label">Edit</string>
    <string name="title_activity_task_details">TaskDetailsActivity</string>
    <string name="save_nbtn_label">Save</string>
    <string name="cancel_nbtn_label">Cancel</string>
    <string name="edit_milestone_hint">Edit threshold</string>
    <string name="edit_revenue_hint">Edit Revenue</string>

    <string name="loggining_in">Logging you in …</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="label_active_tasks">Active tasks</string>
    <string name="amount_formatter">%1$s €</string>
    <string name="permission_denied_explanation">Permission denied</string>
    <string name="settings">Settings</string>
    <string name="permission_rationale">Please grant access</string>
    <string name="ok">Ok</string>
    <string name="current_progress_label">Progress</string>
    <string name="winner_title">Congratulations !</string>
    <string name="format_winner_msg">You have completed your daily goal, and %1$s € is transferred from your Main
        account to your Saving account.</string>
    <string name="ok_nbtn_label">OK</string>
</resources>
